fix: fix color of dark primary for higher color contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* Color customization */
 :root {
   --primary: #41bcc2;
-  --primary-dark: #35a1a6;
+  --primary-dark: #287b7f;
   --accent-light: #fad24c;
   --accent-dark: #92847d;
   --shade: #aebebe;
